Updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,20 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm 21 years old, and currently enrolled in Southwestern College.
+        I took a semester off to complete this bootcamp because I wanted something more
+        fast paced and dedicated to coding and web development.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in Chula Vista California, but my earlier years were spent in Tijuana.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My favorite hobbies would include watching sports, video games, and watching coding videos.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to be the CEO of my own app company.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Chula Vista, but I plan to move to Oregon in the near future.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I've been into computers since I can remember, I developed a love for them and for techonlogy in general.
+        I just love that computer programming lets you build whatever you want.</p>
     </section>
 
     <footer id="footer">
